- Fixed wrapping bug in wxRichTextCtrl when there were images present;
  now sets the cursor to the next line after pressing Shift+Enter.
- Fix crash when reading malformed PCX images.
- Fix bug with wrong transparency in GIF animations (troelsk).
- Store palette information for XPM images in wxImage (troelsk).
- Fixed selection bugs and auto list numbering in wxRichTextCtrl.

All (Unix):

- MIME types reading fixed when running under GNOME, reading .desktop
  files and also the default application list.
- Added filesys.no-mimetypesmanager system option so that applications that
  must load an XRC file at program startup don't have to incur the
  mime types manager initialization penalty.

wxMSW:

- Potentially incompatible change: wxExecute() arguments are now quoted if they
  contain spaces and existing quotes are escaped with a backslash. However, to
  preserve compatibility, the argument is unchanged if it is already quoted.
  Notice that this behaviour will change in wxWidgets 3.0 where all arguments
  will be quoted, please update your code now if you are affected and use only
  wxWidgets 2.8.9 or later.
- Fix keyboard support in wxSpinCtrl broken in 2.8.8.
- Compile fix for WinCE in window.cpp (no VkKeyScan in Windows CE).
- Support disabling items before adding them to the menu (Christian Walther).
- Allow to call SetFont(wxNullFont) to reset the font to default.
- Implement UUID::operator==() and !=() (SQLAware Corporation).
- Fixed long standing (introduced in 2.6.3) bug which resulted in always
  creating a DIB and not DDB in wxBitmap(const wxImage&) ctor.
- Fix the bug with wxFileDialog not being shown at all if the default file name
  was invalid.
- Fix hang in keyboard navigation code with radio buttons under Windows 2000.
- Implement wxWinINetInputStream::GetSize() (spicerno).

wxGTK:

- Fixed masking of disabled bitmaps in wxMenuItem and wxStaticBitmap.
- Fixed generation of events for an initially empty wxDirPickerCtrl.